<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_black"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/nav_close"
            android:src="@drawable/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />
        <android.support.v7.widget.AppCompatImageView
            android:layout_marginTop="4dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon_clock"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </RelativeLayout>
    <android.support.v7.widget.ContentFrameLayout
        android:layout_marginTop="10dp"
        android:theme="@style/nav_text"
        style="@style/NavMenuItem">
        <TextView
            android:layout_gravity="center_vertical"
            style="@style/nav_text"
            android:text="@string/on_duty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_marginEnd="40dp"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.ContentFrameLayout>
    <android.support.v7.widget.ContentFrameLayout
        android:id="@+id/fl_home_"
        android:theme="@style/nav_text"
        style="@style/NavMenuItem">
        <TextView
            android:layout_gravity="center_vertical"
            style="@style/nav_text"
            android:text="@string/label_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.ContentFrameLayout>

    <android.support.v7.widget.ContentFrameLayout
        android:id="@+id/fl_notification"
        android:theme="@style/nav_text"
        style="@style/NavMenuItem">
        <TextView
            android:layout_gravity="center_vertical"
            style="@style/nav_text"
            android:text="@string/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_notification_counter"
            android:text="0"
            android:layout_marginEnd="60dp"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.ContentFrameLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.ContentFrameLayout
                android:id="@+id/fl_schedule"
                android:theme="@style/nav_text"
                style="@style/NavMenuItem">
                <TextView
                    android:layout_gravity="center_vertical"
                    style="@style/nav_text"
                    android:text="@string/schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </android.support.v7.widget.ContentFrameLayout>
            <android.support.v7.widget.ContentFrameLayout
                android:id="@+id/fl_settings"
                android:theme="@style/nav_text"
                style="@style/NavMenuItem">
                <TextView
                    android:layout_gravity="center_vertical"
                    style="@style/nav_text"
                    android:text="@string/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </android.support.v7.widget.ContentFrameLayout>
            <android.support.v7.widget.ContentFrameLayout
                android:id="@+id/fl_tutorials"
                android:theme="@style/nav_text"
                style="@style/NavMenuItem">
                <TextView
                    android:layout_gravity="center_vertical"
                    style="@style/nav_text"
                    android:text="@string/tutorials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </android.support.v7.widget.ContentFrameLayout>
            <android.support.v7.widget.ContentFrameLayout
                android:id="@+id/fl_chat"
                android:theme="@style/nav_text"
                style="@style/NavMenuItem">
                <TextView
                    android:layout_gravity="center_vertical"
                    style="@style/nav_text"
                    android:text="@string/text_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </android.support.v7.widget.ContentFrameLayout>
            <android.support.v7.widget.ContentFrameLayout
                android:id="@+id/fl_logout"
                android:theme="@style/nav_text"
                style="@style/NavMenuItem">
                <TextView
                    android:layout_gravity="center_vertical"
                    style="@style/nav_text"
                    android:text="@string/text_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </android.support.v7.widget.ContentFrameLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>
