<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.blackdreams.sumitthakur.o2clock.ui.onboarding.forgotpassword.ForgotPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large"
        android:background="@drawable/button_shape"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatTextView
            style="@style/text_view"
            android:layout_gravity="center"
            android:text="@string/forgot_your_password"
            android:textColor="@color/fake_black"
            android:textSize="@dimen/font_large"
            />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etEmailOrPhone"
        style="@style/edit_text"
        android:background="@drawable/rectangle_edit_text"
        android:hint="@string/email_phone_required"
        android:inputType="text"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/primary_button"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_normal"
        android:background="@color/sky_blue"
        android:text="@string/btn_continue"
        android:textColor="@color/white"
        />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
